--- a/public/templates/events.html
+++ b/public/templates/events.html
@@ -72,6 +72,7 @@
 					<a href='/#/eventRegistrations/{{event._id}}' class='btn btn-xlarge btn-primary' role='button' ng-show='iSvc.isAuthorized("admin") || iSvc.isAuthorizedForEvent("fadmin", event._id) || iSvc.isAuthorizedForLocation("ladmin", event.location)'><span class='glyphicon glyphicon-list-alt'></span></a>
 					<a href='/#/eventContacts/{{event._id}}' class='btn btn-xlarge btn-primary' role='button' ng-show='iSvc.isAuthorized("admin") || iSvc.isAuthorizedForEvent("fadmin", event._id) || iSvc.isAuthorizedForLocation("ladmin", event.location)'><span class='glyphicon glyphicon-sunglasses'></span></a>
 					<button type="button" class="btn btn-xlarge btn-info" ng-click='sendReceiptEmail(event._id)' ng-show='iSvc.isAuthorized("admin") && platform.isJugendsommer()'><span class='glyphicon glyphicon-euro'></span></button>
+					<button type="button" class="btn btn-xlarge btn-info" ng-click='sendReminderEmail(event._id)' ng-show='iSvc.isAuthorized("admin" && platform.isJugendsommer()'><span class='glyphicon glyphicon-thumbs-down'></span></button>
 				</div>
 			</div>
 		</li>
