shop sync reservation and cache calendar parameters

--- a/public/templates/shop/calendar.html
+++ b/public/templates/shop/calendar.html
@@ -73,6 +73,12 @@
             <div class="pull-right">
                 <button type="button" class="btn btn-xs glyphicon glyphicon-trash" ng-disabled='!iSvc.isAuthorized("admin") && !iSvc.isAuthorized("fadmin")' ng-click='delete(l._id)'></button>
             </div>
+            <br />
+            <div ng-show="l.article.type === 'Bus'">
+                {{l.startTime}} - {{l.endTime}}<br />
+                nach: {{l.destination}} [{{l.participants}} Teilnehmer]
+            </div>
+            
         </div>
     </div>
 </div>
