--- a/public/templates/shop/reservation.html
+++ b/public/templates/shop/reservation.html
@@ -88,7 +88,7 @@
                                 <br />
                                 <label for='countFilter' class='control-label col-sm-2'>Anzahl:</label>
                                 <div class='col-sm-5 input-group'>
-                                    <input type="number" id='countFilter' class='form-control' ng-model='count' min="1" step="1" ></input>
+                                    <input type="number" id='countFilter' class='form-control' ng-model='count' min="1" step="1" ng-disabled="type === 'Bus'"></input>
                                 </div>
                                 <br />
                                 <div ng-show="type === 'Bus'" class="container">
