--- a/public/templates/registration/registration.html
+++ b/public/templates/registration/registration.html
@@ -50,14 +50,14 @@
 							</div>
 						</div>
 						<!-- ADDRESSCHILD -->
-						<div ng-show='type !== "spiritnight"' class='form-group' ng-class='{ "has-error": registrationForm.addressChild.$invalid }'>
+						<div class='form-group' ng-class='{ "has-error": registrationForm.addressChild.$invalid }'>
 							<label for='addressChild' class='control-label col-sm-2'>{{"RESERVATION.LABEL_ADDRESS_CHILD" | translate}}</label>
 							<div class='col-sm-8'>
 								<input name='addressChild' type='text' ng-model='addressChild' maxlength='100' class='form-control' required></input>
 							</div>
 						</div>
 						<!-- CITYCHILD -->
-						<div ng-show='type !== "spiritnight"' class='form-group' ng-class='{ "has-error": registrationForm.cityChild.$invalid }'>
+						<div class='form-group' ng-class='{ "has-error": registrationForm.cityChild.$invalid }'>
 							<label for='cityChild' class='control-label col-sm-2'>{{"RESERVATION.LABEL_CITY_CHILD" | translate}}</label>
 							<div class='col-sm-8'>
 								<select name='cityChild' class='sel-base form-control' ng-model='cityChild'>
