use comboboxes for bithdate

--- a/public/templates/registration/registration.html
+++ b/public/templates/registration/registration.html
@@ -86,7 +86,8 @@
 							<label for='birthdayChild' class='control-label col-sm-2'>{{"RESERVATION.LABEL_BIRTHDAY_CHILD" | translate}}</label>
 							<div class='col-sm-8'>
 								<p class='input-group'>
-									<ng-datepicker ng-model='birthdayChild' view-format="DD.MM.YYYY"  locale='de' required></ng-datepicker>
+									<ng-combo-date-picker ng-model="birthdayChild" required></ng-combo-date-picker>
+									<!--<ng-datepicker ng-model='birthdayChild' view-format="DD.MM.YYYY"  locale='de' required></ng-datepicker>-->
 								</p>
 							</div>
 						</div>
