--- a/public/templates/info/info-kiso-it.html
+++ b/public/templates/info/info-kiso-it.html
@@ -1,24 +1,27 @@
 <div class='container'>
-    <h2><strong>KiSo – Kindersommer 2018</strong></h2>
+    <h2><strong>KiSo – Kindersommer 2019</strong></h2>
 	<img src="./../../../../assets/KiSo2017-folderweb1.png" style="height:500px;float:left;margin-right:15px" />
+	<h4>Chi può partecipare:</h4>
 	<p>Per bambini di qualsiasi madrelingua che frequentano le elementari.<br />Le attività vengono svolte in lingua tedesca, perciò è richiesta una sufficiente conoscenza della lingua tedesca.</p>
-	<p>Al massimo 45 bambini a settimana</p>
-	<h4>Dove:</h4>
-	<p><strong><time>Dal 18 giugno al 3 agosto 2018</time></strong><br />Centro Maria Heim, via Novacella 5<br />Novità: A causa dei lavori di ristrutturazione della Münzbank a Gries, quest' anno, tutte le sette settimane si svolgeranno nel centro Maria Heim.</p>
-	<h4>Quando:</h4>
+	<h4>Quanti possono partecipare:</h4>
+	<p>Al massimo 40 bambini a settimana</p>
+	<h4>Quando è dove si svolge il KiSo:</h4>
+	<p><strong><time>Dal 17 giugno al 2 agosto 2019</time></strong><br />Centro Maria Heim, via Novacella 5</p>
 	<p>Da lunedì a venerdì dalle ore 8:30 alle ore 15:00<br />I genitori possono portare i bambini tra le ore 7:45 e le ore 8:30, e ritirarli tra le ore 15:00 e le ore 15:30.</p>
 	<h4>Costi:</h4>
 	<p>80€ a settimana per il primo bambino<br />Per fratelli e sorelle 70€ a settimana <br />Nel prezzo sono comprese l’attività, il pranzo, una merenda e una maglietta.</p>
+	<p>NOVITÀ: prezzo facoltativo di 90€ a settimana, per sostenere il progetto.</p>
 	<h4>Attività:</h4>
-	<p>Ogni settimana è dedicata a un argomento specifico (p.es. circo, fiabe, sport). I bambini passano la maggior parte del tempo all’aperto. Nelle giornate molto calde e di pioggia le attività si svolgeranno in casa. A Gries i bambini passano del tempo anche presso lo studentato San Benedetto. Tempo permettendo una volta in settimana i bambini vanno in gita nei dintorni di Bolzano. Inoltre ogni settimana viene organizzata una grigliata in giardino.</p>
+	<p>Ogni settimana è dedicata a un argomento specifico (p.es. circo, fiabe, sport). Il programma verrà sviluppato in un processo partecipativo dal Jugenddienst Bozen e dal*la responsabile del progetto insieme al team di animatori. I bambini passano la maggior parte del tempo all’aperto. Nelle giornate molto calde e di pioggia le attività si svolgeranno in casa. Tempo permettendo una volta in settimana i bambini vanno in gita nei dintorni di Bolzano. Inoltre ogni settimana viene organizzata una grigliata in giardino.</p>
 	<p>Il nostro obiettivo è offrire ai genitori un punto di appoggio per il periodo estivo, e ai bambini uno spazio protetto dove possano godersi il tempo libero e le varie attività stando tra coetanei. I giochi e le attività vogliono promuovere la creatività dei bambini e la conoscenza e il rispetto dei valori fondamentali per la convivenza.</p>
 	<h4>L’equipe di animatori:</h4>
-	<p>L’educatrice sociale Nadia Vicari è la responsabile del progetto e lo svolgerà insieme ad un’equipe tra sette e nove animatori tra i 16 e i 26 anni provenienti dall’ambito associativo.</p>
+	<p>La direzione del progetto, insieme ad un team di sette/nove persone tra i 16 e 26 anni, provenienti dall’ambito associativo, si occuperà dei bambini partecipanti. Il team viene accuratamente assemblato dopo un colloquio di lavoro. Per noi è importante mettere insieme un team equilibrato di animatori uomini e donne, ma anche di minori (a partire da 16 anni) e adulti. Inoltre, obblighiamo tutti gli animatori a frequentare un corso di primo soccorso e un corso pedagogico di base.</p>
 	<h4>Iscrizioni:</h4>
-	<p>L’iscrizione avviene online a partire da giovedì, <strong><time>15 marzo 2018 alle ore 19:00 </time></strong> sul sito  <strong><a href="www.kiso.bz.it">www.kiso.bz.it</a></strong> Importante: I genitori devono creare un account con nome utente e password su questo sito. Questo account può essere creato a partire dal 9 marzo 2017 e può essere usato anche in anni futuri.<br />In caso di domande rivolgersi a <a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a>, <a href="tel:0471 972098">0471 972098</a> (di pomeriggio)</p>
+	<p>L’iscrizione avviene online a partire da giovedì, <strong><time>14 marzo 2019 alle ore 19:00 </time></strong> sul sito  <strong><a href="www.kiso.bz.it">www.kiso.bz.it</a></strong> Importante: I genitori devono creare un account con nome utente e password su questo sito. Questo account può essere creato a partire dal 7 marzo 2019 e può essere usato anche in anni futuri.<br />In caso di domande rivolgersi a <a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a>, <a href="tel:0471 972098">0471 972098</a> (di pomeriggio)</p>
 	<h4>Importante:</h4>
 	<p>I genitori possono iscrivere solo i propri figli.</p>
 	<p>Il bambino deve aver già frequentato la prima elementare (eccezione: fratelli minori che hanno concluso l’ultimo anno di scuola materna).<br />L’iscrizione è vincolante dal momento in cui Lei ottiene per iscritto la conferma dello Jugenddienst Bozen.</p>
+	<p>Si prega di leggere attentamente le nostre condizioni generali.</p>
 	<adress style="font-style:italic"><mark>Jugenddienst Bozen</mark><br />Pfarrplatz 24, piazza Parrocchia<br />39100 Bozen/Bolzano<br />0471 972098 (15.00-18.30 h)<br /><a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a></adress><br />
 
 	<div ng-include='"templates/agb/agb-kiso-it.html"'></div>
