not display agb kiso

--- a/public/templates/info/info-kiso-de.html
+++ b/public/templates/info/info-kiso-de.html
@@ -25,7 +25,7 @@
 	<adress style="font-style:italic"><mark>Jugenddienst Bozen</mark><br />Pfarrplatz 24, piazza Parrocchia<br />39100 Bozen/Bolzano<br />0471 972098 (15.00-18.30 h)<br /><a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a></adress><br />
 	<img src="./../../../../assets/jdb.png" style="vertical-align:bottom;height:110px;margin-left:15px" />
 
-	<div ng-include='"templates/agb/agb-kiso-de.html"'></div>
+	<!--<div ng-include='"templates/agb/agb-kiso-de.html"'></div>-->
 
 	<img src="./../../../../assets/logo-jungschar.png" style="vertical-align:bottom;height:50px;margin-left:15px" />
 	<img src="./../../../../assets/raika.png" style="vertical-align:bottom;height:70px;margin-left:15px" />
