bugfix fee in event and mindate in combo selection

--- a/public/templates/registration/registration.html
+++ b/public/templates/registration/registration.html
@@ -89,7 +89,7 @@
 							<label for='birthdayChild' class='control-label col-sm-2'>{{"RESERVATION.LABEL_BIRTHDAY_CHILD" | translate}}</label>
 							<div class='col-sm-8'>
 								<p class='input-group'>
-									<ng-combo-date-picker ng-model="birthdayChild" ngMinDate="2000-01-01" required></ng-combo-date-picker>
+									<ng-combo-date-picker ng-model="birthdayChild" ng-min-date="2000-01-01" required></ng-combo-date-picker>
 									<!--<ng-datepicker ng-model='birthdayChild' view-format="DD.MM.YYYY"  locale='de' required></ng-datepicker>-->
 								</p>
 							</div>
