prepare payment filter

--- a/public/templates/report.html
+++ b/public/templates/report.html
@@ -62,6 +62,10 @@
 				</span>
 			</div>
 		</div>
+		<!--<div class='row' style='margin-top: 10px'>
+			<label for='paymentFilter' class='control-label col-sm-2'>Einzahlung:</label>
+			<input id='paymentFilter' class='form-control' type='checkbox' ng-model='paymentFilter' />
+		</div>-->
 		<div class='row' style='margin-top:10px'>
 			<label for='yearFilter' class='control-label col-sm-2'>Jahr:</label>
 			<div class='col-sm-5 input-group'>
