--- a/public/templates/info/info-jdbl.html
+++ b/public/templates/info/info-jdbl.html
@@ -19,5 +19,5 @@
 	<p>Neben den fünf hauptamtlichen Mitarbeitern des Jugenddienstes, sind im Sommer viele Sommerbetreuer f&uuml;r das Sommerprogramm mit verantwortlich.</p>
 	<p>Seit Jahren setzt der <mark>Jugenddienst Bozen-Land</mark> dabei auf ein Team welches aus p&auml;dagogischem Fachpersonal, gepaart mit jugendlicher Frische, besteht. Diese Kombination hat sich bew&auml;hrt und ist der Garant f&uuml;r viele tolle Sommerprogramme.</p>
 	<h3>Infohotline:</h3>
-	<strong>G&uuml;nther Reichhalter</strong> (Tel. <a href='tel:+393408136941'>+393408136941</a>)
+	<strong>Jasmine Saltuari</strong> (Tel. <a href='tel:+3473340181'>+3473340181</a>)
 </div>
