--- a/public/templates/events.html
+++ b/public/templates/events.html
@@ -11,8 +11,8 @@
 	<div ng-show="platform.isJDUL()">
 		<div class="row">
 			<div class="col-sm-3">
-				<h2><span ng-show="lang == 'de'" class="label label-info">Anmeldeschluss: 23.03.2018</span></h2>
-				<h2><span ng-show="lang == 'it'" class="label label-info">Termine d'iscrizioni: 23.03.2018</span></h2>
+				<h2><span ng-show="lang == 'de'" class="label label-info">Anmeldestart: 11.02.2019</span></h2>
+				<h2><span ng-show="lang == 'it'" class="label label-info">Partenza iscrizioni: 11.02.2019</span></h2>
 			</div>
 		</div>
 	</div>	
