--- a/public/templates/registration/registration.html
+++ b/public/templates/registration/registration.html
@@ -276,36 +276,18 @@
 								<div ng-show="platform.isJSGries()" ng-include src='"templates/agb/agb-jsgries-de.html"'></div>
 							</div>
 						</div>
-					</div>
-					
-					<!--<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
-  						<div class="modal-dialog modal-lg" role="document">
-							<div class="modal-content">
-								<div class="modal-header">
-									<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-									<h4 class="modal-title">Information</h4>
-								</div>
-    							<div class="modal-body">
-									<div ng-show="platform.isJDBL() || platform.isJugendsommer()" ng-include src='"templates/agb/agb-jdbl.html"'></div>
-
-									<div ng-show="platform.isKiso() && lang == 'de'" ng-include src='"templates/agb/agb-kiso-de.html"'></div>
-									<div ng-show="platform.isKiso() && lang == 'it'" ng-include src='"templates/agb/agb-kiso-it.html"'></div>
-										
-									<div ng-show="platform.isJDUL() && lang == 'de'" ng-include src='"templates/agb/agb-jdul-de.html"'></div>
-									<div ng-show="platform.isJDUL() && lang == 'it'" ng-include src='"templates/agb/agb-jdul-it.html"'></div>
-										
-									<div ng-show="platform.isTest() && lang == 'de'" ng-include src='"templates/agb/agb-jdul-de.html"'></div>
-									<div ng-show="platform.isTest() && lang == 'it'" ng-include src='"templates/agb/agb-jdul-it.html"'></div>
-									
-									<div ng-show="platform.isJSGries()" ng-include src='"templates/agb/agb-jsgries-de.html"'></div>
-								</div>
-								<div class="modal-footer">
-									<button type="button" class="close btn btn-warning" data-dismiss="modal" aria-label="Close">Zur&uuml;ck</button>
+						<br />
+						<div ng-show="platform.isJDUL()">
+							<input type='checkbox' name='insurance' ng-model='acceptInsurance'><strong>{{"RESERVATION.LABEL_INSUR1" | translate}}<button type="button" class="btn btn-default" ng-click="toggleInsurance()" >{{"RESERVATION.LABEL_INSUR2" | translate}}</button></strong></input>
+							<div class="panel panel-default" ng-class="insuranceVisibility ? 'show' : 'hidden'">
+								<div class="panel-body">
+									<div ng-show="platform.isJDUL() && lang == 'de'" ng-include src='"templates/insurance/insurance-jdul-de.html"'></div>
+									<div ng-show="platform.isJDUL() && lang == 'it'" ng-include src='"templates/insurance/insurance-jdul-it.html"'></div>
 								</div>
 							</div>
-  						</div>
-					</div>-->
-
+						</div>
+					</div>
+					
 					<br />
 					<p class="bg-info" style='padding: 10px; margin-bottom: 0px;'>{{"RESERVATION.LABEL_REGISTRATION_PAY_INFO" | translate}}</p>
 					<p ng-show='platform.isJDUL()' class="bg-info" style="padding: 10px; margin-top: 0px;">{{"RESERVATION.LABEL_REGISTRATION_RECEIPT_INFO" | translate}}</p>
