--- a/public/templates/report.html
+++ b/public/templates/report.html
@@ -105,8 +105,9 @@
 
 	<a download="report.xls" href="#" onclick="return ngTableExcelExport.excel(this, 'datatable', 'Sheet1');"><span class='glyphicon glyphicon-share' style='margin-left:10px'></span> Export to Excel</a>
 	<div cg-Busy='{promise:busyPromise,message:"Loading",backdrop:true,minDuration:500}'></div>
-	<table class='table table-striped table-bordered tbl-serial3'>
+	<table class='table table-striped table-bordered tbl-serial4'>
 		<tr>
+			<th></th>
 			<th></th>
 			<th></th>
 			<th></th>
@@ -162,6 +163,7 @@
 		</tr>
 		<tr ng-repeat='reg in registrations | orderBy:[colNameSort,colNameSort2]'>
 			<td ng-class='{"bg-warning": isOnWait(reg), "bg-danger": isAfterDeadline(reg)}'><button class="btn glyphicon glyphicon-pencil" ng-disabled='!iSvc.isAuthorized("admin")' type="button" ng-click='editRegistration(reg._id)'></button></td>
+			<td ng-class='{"bg-warning": isOnWait(reg), "bg-danger": isAfterDeadline(reg)}'><button class="btn glyphicon glyphicon-euro" ng-disabled='!iSvc.isAuthorized("admin") && (platform.isJugendsommer() || platform.isTest())' type="button" ng-click='sendPaymentMail(reg._id)'></button></td>
 			<td ng-class='{"bg-warning": isOnWait(reg), "bg-danger": isAfterDeadline(reg)}'><button type="button" class="btn glyphicon glyphicon-trash" ng-disabled='!iSvc.isAuthorized("admin")' ng-click='deleteRegistration(reg._id)'></button></td>
 			<td ng-class='{"bg-warning": isOnWait(reg), "bg-danger": isAfterDeadline(reg)}'></td>
 			<td>{{reg.activityId.eventId.location}} - {{reg.activityId.eventId.name}}</td>
@@ -194,7 +196,7 @@
 			<td ng-show='platform.isJDUL()'>{{reg.commentInternal}}</td>
 			<td>{{reg.registrationDate | date: 'dd/MM/yyyy : hh.mm.ss'}}</td>	
 		</tr>
-		<tr><td></td><td></td><td></td><td colspan='8'>Summe:</td><td align='right'>{{calculateOverallFee(registrations)}}</td><td colspan='17'></td></tr>
+		<tr><td></td><td></td><td></td><td></td><td colspan='8'>Summe:</td><td align='right'>{{calculateOverallFee(registrations)}}</td><td colspan='17'></td></tr>
 	</table>
 	<table id='datatable' class='hidden'>
 		<tr>
