--- a/public/templates/info/info-kiso-de.html
+++ b/public/templates/info/info-kiso-de.html
@@ -1,6 +1,6 @@
 <div class='container'>
 	<h2><strong>KiSo – Kindersommer 2019</strong></h2>
-	<img src="./../../../../assets/KiSo2017-folderweb1.png" style="height:500px;float:left;margin-right:15px" />
+	<img src="./../../../../assets/KISO2019.png" style="height:500px;float:left;margin-right:15px" />
 	<h4>Wer darf daran teilnehmen</h4>
 	<p>Für Grundschulkinder aller Muttersprachen.<br />Das Programm wird in deutscher Sprache
 		angeboten, somit werden genügend Grundkenntnisse der deutschen Sprache vorausgesetzt. Der KiSo ist kein Sprachkurs.</p>
@@ -24,6 +24,47 @@
 	<p>Das Kind muss bereits die erste Klasse Grundschule besucht haben (Ausnahme: Geschwisterkinder, die das letzte Kindergartenjahr besucht haben)<br />Die Anmeldung ist verbindlich, wenn Sie die schriftliche Bestätigung des Jugenddienstes Bozen erhalten haben</p>
 	<adress style="font-style:italic"><mark>Jugenddienst Bozen</mark><br />Pfarrplatz 24, piazza Parrocchia<br />39100 Bozen/Bolzano<br />0471 972098 (15.00-18.30 h)<br /><a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a></adress><br />
 	<img src="./../../../../assets/jdb.png" style="vertical-align:bottom;height:110px;margin-left:15px" />
+	<br />
+	<br />
+	<h2><strong>Unsere Projektwochen für Mittelschüler*innen</strong></h2>
+	<h3>Film ab</h3>
+	<p>Let's make a movie! Was genau passiert vor und hinter der Kamera? Bei unserem Filmworkshop lernen wir die vielfältigen Bereiche rund um die Entstehung eines Films kennen, indem wir selbst drehen, schneiden und unseren eigenen Film gestalten. Wir können unseren Ideen freien Lauf lassen und schlüpfen auch selbst in die verschiedenen Rollen, die es am Set braucht. Bereit? Dann Film ab!</p>
+	<p>
+	Alter: 11-15 Jahre<br />
+	Zeitraum: 8. bis 12. Juli 2019, 09.00 bis 16.00 Uhr (inkl. Mittagessen)<br />
+	Ort: Lamplhaus Rentsch, Bozen<br />
+	Kosten: 80,00 Euro / Teilnehmer*in<br />
+	Referent: Willy Theil<br />
+	Anmeldebeginn: 15. März 2019 auf <a href="www.kiso.bz.it">www.kiso.bz.it</a><br />	
+	</p>
+	<h3>Hip Hop Performance</h3>
+	<p>Hip-Hop ist mehr als nur ein Tanzstil: It’s a culture – in der Bewegung, Musik und Lebensstil zusammentreffen. Im Workshop werden Grundschritte und aufbauende Schrittkombinationen aus verschiedenen Stilrichtungen eingeübt, welche anschließend zu einer verrückten Choreo verschmelzen. Ready?... and 5,6,7,8! </p>
+	<p>
+	Alter: 11-15 Jahre<br />
+	Zeitraum: 15. bis 19. Juli 2019, 09.00 bis 16.00 Uhr (inkl. Mittagessen)<br />
+	Ort: Lamplhaus Rentsch, Bozen<br />
+	Kosten: 80,00 Euro / Teilnehmer*in<br />
+	Referentin: Valentina Bagnis<br />	
+	</p>
+	<h3>Fortnite Week</h3>
+	<p>Eine Woche ganz im Zeichen des „Gaming“. Es wird nicht nur gemeinsam das beliebte Fortnite gespielt, sondern wir tauchen tiefer in die Virtual Reality ein und beschäftigen uns anhand unterschiedlicher pädagogischer Methoden mit dem Medium „Videospiel“ an sich. Was steckt alles dahinter? Was macht ein gutes Videospiel aus? Welche Rollen nehmen wir dabei ein? Let’s play!</p>
+	<p>
+	Alter: 12-15 Jahre<br />
+	Zeitraum: 22. bis 26. Juli 2019, 09.00 bis 16.00 Uhr (inkl. Mittagessen)<br />
+	Ort: Lamplhaus Rentsch, Bozen<br />
+	Kosten: 80,00 Euro / Teilnehmer*in<br />
+	Referent: Lukas Paoli, in Zusammenarbeit mit Forum Prävention<br />
+	</p>
+	<h3>Dance & Film</h3>
+	<p>Filmemacher*innen und Tänzer*innen aufgepasst! Gemeinsam suchen wir uns fette Beats, entwickeln eine coole Choreo und planen ein Video oder einen Film dazu. Der Fantasie sind hier keine Grenzen gesetzt.</p>
+	<p>
+	Alter: 11-15 Jahre<br />
+	Zeitraum: 29. Juli bis 2. August 2019, , 09.00 bis 16.00 Uhr (inkl. Mittagessen)<br />
+	Ort: Lamplhaus Rentsch, Bozen<br />
+	Kosten: 80,00 Euro / Teilnehmer*in<br />
+	Referent*innen: Valentina Bagnis und Willy Theil<br />
+	</p>
+
 
 	<!--<div ng-include='"templates/agb/agb-kiso-de.html"'></div>-->
 
