fix kiso 2019 img path

--- a/public/templates/info/info-kiso-de.html
+++ b/public/templates/info/info-kiso-de.html
@@ -1,6 +1,6 @@
 <div class='container'>
 	<h2><strong>KiSo – Kindersommer 2019</strong></h2>
-	<img src="./../../../../assets/KISO2019.png" style="height:500px;float:left;margin-right:15px" />
+	<img src="./../../../../assets/KISO2019.jpg" style="height:500px;float:left;margin-right:15px" />
 	<h4>Wer darf daran teilnehmen</h4>
 	<p>Für Grundschulkinder aller Muttersprachen.<br />Das Programm wird in deutscher Sprache
 		angeboten, somit werden genügend Grundkenntnisse der deutschen Sprache vorausgesetzt. Der KiSo ist kein Sprachkurs.</p>
