--- a/public/templates/info/info-kiso-it.html
+++ b/public/templates/info/info-kiso-it.html
@@ -1,6 +1,6 @@
 <div class='container'>
     <h2><strong>KiSo – Kindersommer 2019</strong></h2>
-	<img src="./../../../../assets/KiSo2017-folderweb1.png" style="height:500px;float:left;margin-right:15px" />
+	<img src="./../../../../assets/KISO2019.jpg" style="height:500px;float:left;margin-right:15px" />
 	<h4>Chi può partecipare:</h4>
 	<p>Per bambini di qualsiasi madrelingua che frequentano le elementari.<br />Le attività vengono svolte in lingua tedesca, perciò è richiesta una sufficiente conoscenza della lingua tedesca.</p>
 	<h4>Quanti possono partecipare:</h4>
