kiso de info 2019

--- a/public/templates/info/info-kiso-it.html
+++ b/public/templates/info/info-kiso-it.html
@@ -23,8 +23,45 @@
 	<p>Il bambino deve aver già frequentato la prima elementare (eccezione: fratelli minori che hanno concluso l’ultimo anno di scuola materna).<br />L’iscrizione è vincolante dal momento in cui Lei ottiene per iscritto la conferma dello Jugenddienst Bozen.</p>
 	<p>Si prega di leggere attentamente le nostre condizioni generali.</p>
 	<adress style="font-style:italic"><mark>Jugenddienst Bozen</mark><br />Pfarrplatz 24, piazza Parrocchia<br />39100 Bozen/Bolzano<br />0471 972098 (15.00-18.30 h)<br /><a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a></adress><br />
-
-	<!--<div ng-include='"templates/agb/agb-kiso-it.html"'></div>-->
+	<br />
+	<br />
+	<h2><strong>Le nostre settimane di progetto per ragazzi dai 11 ai 15 anni</strong></h2>
+	<h3>Film ab</h3>
+	<p>Let's make a movie! Che cosa succede esattamente davanti e dietro la telecamera? Nel nostro laboratorio cinematografico andremo a conoscere i vari ambiti intorno alla creazione di un film girando, montando e creando il nostro cortometraggio. Possiamo dare libero sfogo alle nostre idee e anche scivolare nei diversi ruoli sul set. Pronti? Azione!</p>
+	<p>
+	Età: 11-15 anni<br />
+	Periodo: dall'8 al 12 luglio 2019, dalle 09.00 alle 16.00 (pranzo incluso)<br />
+	Luogo: Ex-Agnello, Via Rencio, Bolzano<br />
+	Costi: 80,00 Euro/partecipante<br />
+	Referente: Willy Theil<br />			
+	</p>
+	<h3>Hip Hop Performance</h3>
+	<p>L'hip-hop è più di uno stile di danza: è una cultura - in cui movimento, musica e stile di vita si incontrano. Nel laboratorio si praticano passi base e combinazioni di passi costruttivi di stili diversi, che poi si fondono in una coreografia folle. Pronto?....... e 5,6,7,8!</p>
+	<p>
+	Età: 11-15 anni<br />
+	Periodo: dal 15 al 19 luglio 2019, dalle 09.00 alle 16.00 (pranzo incluso)<br />
+	Luogo: Ex-Agnello, Via Rencio, Bolzano<br />
+	Costi: 80,00 Euro/partecipante<br />
+	Referente: Valentina Bagnis<br />
+	</p>
+	<h3>Fortnite Week</h3>
+	<p>Una settimana dedicata al videogioco. Non solo giocheremo insieme il popolare Fortnite, ma ci immergeremo anche nella realtà virtuale ed esploreremo il mezzo culturale dei "videogames" in generale, utilizzando vari metodi pedagogici. Cosa c'è dietro questi mondi di pixel? Cosa rende un buon videogioco? Quali sono i ruoli che assumiamo come giocatori? Let’s play!</p>
+	<p>
+	Età: 12-15 anni<br />
+	Periodo: dal 22 al 26 luglio 2019, dalle 09.00 alle 16.00 (pranzo incluso)<br />
+	Luogo: Ex-Agnello, Via Rencio, Bolzano<br />
+	Costi: 80,00 Euro/partecipante<br />
+	Referente: Lukas Paoli, in collaborazione con Forum Prevenzione<br />			
+	</p>
+	<h3>Film & Dance</h3>
+	<p>Attenzione registi/e e ballerini/e! Tutti insieme troveremo fat beats, svilupperemo una coreografia ganza e produrremo un video di musica o un filmato. Non ci sono limiti alla tua immaginazione.</p>
+	<p>
+	Età: 11-15 anni<br />
+	Periodo: dal 29 luglio al 2 agosto 2019, , 09.00-16.00 (pranzo incluso)<br />
+	Luogo: Ex-Agnello, Via Rencio, Bolzano<br />
+	Costi: 90,00 Euro/partecipante<br />
+	Referenti: Valentina Bagnis e Willy Theil<br />		
+	</p>
 
 	<img src="./../../../../assets/jdb.png" style="vertical-align:bottom;height:110px;margin-left:15px" />
 	<img src="./../../../../assets/logo-jungschar.png" style="vertical-align:bottom;height:50px;margin-left:15px" />
