change info site of bozen

--- a/public/templates/info/info-kiso-de.html
+++ b/public/templates/info/info-kiso-de.html
@@ -5,20 +5,24 @@
 	<p>Für Grundschulkinder aller Muttersprachen.<br />Das Programm wird in deutscher Sprache
 		angeboten, somit werden genügend Grundkenntnisse der deutschen Sprache vorausgesetzt. Der KiSo ist kein Sprachkurs.</p>
 	<h4>Wie viele Kinder dürfen Teilnehmen?</h4>
-	<p>Maximal 40 Kinder pro Woche</p>
+	<p>Maximal 42 Kinder pro Woche</p>
 	<h4>Wann und wo findet der KiSo statt?</h4>
 	<p><strong><time>17. Juni - 02. August 2019</time></strong><br />Zentrum Maria Heim, Neustifter Weg 5</p>
-	<p>jeweils von Montag bis Freitag von 8.30 bis 15.00 Uhr<br />Zwischen 7.45 und 8.30 Uhr können die Eltern ihre Kinder bringen; Abholzeit 15.00 – 15.30 Uhr</p>
+	<p>Von Montag bis Freitag von 8:30 bis 15:00 Uhr<br />Zwischen 7:45 und 8:30 Uhr können die Eltern ihre Kinder bringen; Abholzeit 15.00 – 15.30 Uhr</p>
 	<h4>Kosten:</h4>
-	<p>80 € pro Kind & Woche<br />für Geschwisterkinder 70 € pro Woche<br />im Preis inbegriffen: Kinderbetreuung, Mittagessen, Jause, T-Shirt</p>
-	<p>NEU: freiwilliger Solaridätspreis von 90 € pro Woche, um das Projekt zu unterstützen</p>
+	<p>
+	80 € pro Kind & Woche<br />
+	NEU: freiwilliger Solaridätspreis von 90 € pro Woche, um das Projekt zu unterstützen<br />
+	Für Geschwisterkinder 70 € pro Woche<br />
+	Im Preis inbegriffen: Kinderbetreuung, Mittagessen, Jause, T-Shirt
+    </p>
 	<h4>Programm:</h4>
-	<p>Jede Woche steht unter einem anderen Thema (z.B. Zirkus, Weltall, Sport). Das Programm wird vom Jugenddienst Bozen und der Projektleitung gemeinsam mit dem Betreuer*innen-Team in einem partizipativen Prozess erstellt. Die Kinder halten sich viel im Freien auf, aber auch für regenreiche und hitzige Sommertage ist für Programm im Haus gesorgt. Wenn das Wetter schön ist, wird einmal wöchentlich ein Ausflug in der Bozner Umgebung gemacht und einmal wöchentlich im Garten gegrillt.</p>
+	<p>Die Kinder halten sich viel im Freien auf, aber auch für regenreiche und hitzige Sommertage ist für Programm im Haus gesorgt. Bei schönem Wetter wird einmal wöchentlich ein Ausflug in der Bozner Umgebung gemacht und einmal wöchentlich im Garten gegrillt.</p>
 	<p>Wichtig ist uns, eine gute Betreuung für die Kinder - und dadurch Entlastung für die Eltern – anzubieten. Die Kinder sollen sich mit viel Freiraum, aber auch gezielten Programmen unter Gleichaltrigen wohl fühlen. Im Spiel können die Kinder frei und ungezwungen ihre Fähigkeiten entfalten und Werte, die für das Zusammenleben mit anderen Menschen wichtig sind, kennen und respektieren lernen.</p>
 	<h4>BetreuerInnen-Team:</h4>
-	<p>Die Projekt- und Vizeprojektleitung werden zusammen mit einem sieben- bis neunköpfigen Team (16 - 26 Jahre) die teilnehmenden Kinder betreuen. Dieses besteht aus Bozner JungscharleiterInnen, Jugendlichen des „ExPeerience“ - Projekts vom Jugendzentrum Papperlapapp und pädagogisch interessierten und/oder erfahrenen Jugendlichen. Das Team wird nach einem Bewerbungsgespräch sorgfältig zusammengestellt. Wichtig ist uns dabei, ein ausgeglichenes Team aus männlichen und weiblichen sowie minderjährigen (ab 16. Jahren) und volljährigen Betreuer*innen zusammenzustellen. Außerdem verpflichten wir alle Betreuer*innen, einen Erste Hilfe Kurs, sowie einen pädagogischen Grundkurs zu besuchen.</p>
+	<p>Die Sozialpädagogin Martina Zampedri wird das Projekt leiten. Sie wird zusammen mit einem sieben- bis neunköpfigen Team (16 - 26 Jahre) die Kinder betreuen. Das Team besteht aus Bozner Jungscharleiter*innen, Jugendlichen des „ExPeerience“ - Projekts vom Jugendzentrum Papperlapapp und pädagogisch interessierten und/oder erfahrenen Jugendlichen.</p>
 	<h4>Anmeldung:</h4>
-	<p>Die Online-Anmeldung findet ab Donnerstag, <strong><time>14. März 2019 ab 19.00 Uhr</time></strong> unter <strong><a href="www.kiso.bz.it">www.kiso.bz.it</a></strong> statt. Wichtig: Alle Eltern müssen einen Account mit Username und Passwort auf selbiger Internetseite erstellen. Der Account kann ab 7. März 2017 angelegt werden und ist für weitere Jahre wieder verwendbar.<br />Für Fragen: <a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a>, <a href="tel:0471 972098">0471 972098</a> (nachmittags)</p>
+	<p>Die Online-Anmeldung findet ab Donnerstag, <strong><time>14. März 2019 ab 19.00 Uhr</time></strong> unter <strong><a href="www.kiso.bz.it">www.kiso.bz.it</a></strong> statt. Wichtig: Alle Eltern müssen einen Account mit Username und Passwort auf selbiger Internetseite erstellen. Der Account kann ab 7. März 2019 angelegt werden und ist für weitere Jahre wieder verwendbar.<br />Für Fragen: <a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a>, <a href="tel:0471 972098">0471 972098</a> (nachmittags)</p>
 	<h4>Wichtig:</h4>
 	<p>Alle Eltern und Erziehungsberechtigten dürfen nur die eigenen Kinder einschreiben</p>
 	<p>Das Kind muss bereits die erste Klasse Grundschule besucht haben (Ausnahme: Geschwisterkinder, die das letzte Kindergartenjahr besucht haben)<br />Die Anmeldung ist verbindlich, wenn Sie die schriftliche Bestätigung des Jugenddienstes Bozen erhalten haben</p>
