--- a/public/templates/info/info-kiso-it.html
+++ b/public/templates/info/info-kiso-it.html
@@ -4,18 +4,22 @@
 	<h4>Chi può partecipare:</h4>
 	<p>Per bambini di qualsiasi madrelingua che frequentano le elementari.<br />Le attività vengono svolte in lingua tedesca, perciò è richiesta una sufficiente conoscenza della lingua tedesca.</p>
 	<h4>Quanti possono partecipare:</h4>
-	<p>Al massimo 40 bambini a settimana</p>
+	<p>Al massimo 42 bambini a settimana</p>
 	<h4>Quando è dove si svolge il KiSo:</h4>
 	<p><strong><time>Dal 17 giugno al 2 agosto 2019</time></strong><br />Centro Maria Heim, via Novacella 5</p>
 	<p>Da lunedì a venerdì dalle ore 8:30 alle ore 15:00<br />I genitori possono portare i bambini tra le ore 7:45 e le ore 8:30, e ritirarli tra le ore 15:00 e le ore 15:30.</p>
 	<h4>Costi:</h4>
-	<p>80€ a settimana per il primo bambino<br />Per fratelli e sorelle 70€ a settimana <br />Nel prezzo sono comprese l’attività, il pranzo, una merenda e una maglietta.</p>
-	<p>NOVITÀ: prezzo facoltativo di 90€ a settimana, per sostenere il progetto.</p>
+	<p>
+	80€ a settimana per il primo bambino<br />
+	NOVITÀ: prezzo facoltativo di 90€ a settimana, per sostenere il progetto.<br />
+	Per fratelli e sorelle 70€ a settimana <br />
+	Nel prezzo sono comprese l’attività, il pranzo, una merenda e una maglietta.
+    </p>
 	<h4>Attività:</h4>
-	<p>Ogni settimana è dedicata a un argomento specifico (p.es. circo, fiabe, sport). Il programma verrà sviluppato in un processo partecipativo dal Jugenddienst Bozen e dal*la responsabile del progetto insieme al team di animatori. I bambini passano la maggior parte del tempo all’aperto. Nelle giornate molto calde e di pioggia le attività si svolgeranno in casa. Tempo permettendo una volta in settimana i bambini vanno in gita nei dintorni di Bolzano. Inoltre ogni settimana viene organizzata una grigliata in giardino.</p>
+	<p>I bambini passano la maggior parte del tempo all’aperto. Nelle giornate molto calde e di pioggia le attività si svolgeranno in casa. Tempo permettendo una volta in settimana i bambini vanno in gita nei dintorni di Bolzano. Inoltre ogni settimana viene organizzata una grigliata in giardino.</p>
 	<p>Il nostro obiettivo è offrire ai genitori un punto di appoggio per il periodo estivo, e ai bambini uno spazio protetto dove possano godersi il tempo libero e le varie attività stando tra coetanei. I giochi e le attività vogliono promuovere la creatività dei bambini e la conoscenza e il rispetto dei valori fondamentali per la convivenza.</p>
 	<h4>L’equipe di animatori:</h4>
-	<p>La direzione del progetto, insieme ad un team di sette/nove persone tra i 16 e 26 anni, provenienti dall’ambito associativo, si occuperà dei bambini partecipanti. Il team viene accuratamente assemblato dopo un colloquio di lavoro. Per noi è importante mettere insieme un team equilibrato di animatori uomini e donne, ma anche di minori (a partire da 16 anni) e adulti. Inoltre, obblighiamo tutti gli animatori a frequentare un corso di primo soccorso e un corso pedagogico di base.</p>
+	<p>L’educatrice sociale Martina Zampedri è la responsabile del progetto e lo svolgerà insieme ad un’equipe tra sette e nove animatori tra i 16 e i 26 anni provenienti dall’ambito associativo, giovani del progetto “ExPeerience” del centro giovani Papperlapapp e giovani con interessi e/o esperienze pedagogiche.</p>
 	<h4>Iscrizioni:</h4>
 	<p>L’iscrizione avviene online a partire da giovedì, <strong><time>14 marzo 2019 alle ore 19:00 </time></strong> sul sito  <strong><a href="www.kiso.bz.it">www.kiso.bz.it</a></strong> Importante: I genitori devono creare un account con nome utente e password su questo sito. Questo account può essere creato a partire dal 7 marzo 2019 e può essere usato anche in anni futuri.<br />In caso di domande rivolgersi a <a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a>, <a href="tel:0471 972098">0471 972098</a> (di pomeriggio)</p>
 	<h4>Importante:</h4>
