img programme info it

--- a/public/templates/info/info-kiso-it.html
+++ b/public/templates/info/info-kiso-it.html
@@ -32,6 +32,7 @@
 	<br />
 	<h2><strong>Le nostre settimane di progetto per ragazzi dai 11 ai 15 anni</strong></h2>
 	<h3>Film ab</h3>
+	<img src="./../../../../assets/Kiso_Film.jpg" style="height:110px;float:left;margin-right:15px" />
 	<p>Let's make a movie! Che cosa succede esattamente davanti e dietro la telecamera? Nel nostro laboratorio cinematografico andremo a conoscere i vari ambiti intorno alla creazione di un film girando, montando e creando il nostro cortometraggio. Possiamo dare libero sfogo alle nostre idee e anche scivolare nei diversi ruoli sul set. Pronti? Azione!</p>
 	<p>
 	Età: 11-15 anni<br />
@@ -41,6 +42,7 @@
 	Referente: Willy Theil<br />			
 	</p>
 	<h3>Hip Hop Performance</h3>
+	<img src="./../../../../assets/Kiso_HipHop.jpg" style="height:110px;float:left;margin-right:15px" />
 	<p>L'hip-hop è più di uno stile di danza: è una cultura - in cui movimento, musica e stile di vita si incontrano. Nel laboratorio si praticano passi base e combinazioni di passi costruttivi di stili diversi, che poi si fondono in una coreografia folle. Pronto?....... e 5,6,7,8!</p>
 	<p>
 	Età: 11-15 anni<br />
@@ -50,6 +52,7 @@
 	Referente: Valentina Bagnis<br />
 	</p>
 	<h3>Fortnite Week</h3>
+	<img src="./../../../../assets/Kiso_Fortnite.jpg" style="height:110px;float:left;margin-right:15px" />
 	<p>Una settimana dedicata al videogioco. Non solo giocheremo insieme il popolare Fortnite, ma ci immergeremo anche nella realtà virtuale ed esploreremo il mezzo culturale dei "videogames" in generale, utilizzando vari metodi pedagogici. Cosa c'è dietro questi mondi di pixel? Cosa rende un buon videogioco? Quali sono i ruoli che assumiamo come giocatori? Let’s play!</p>
 	<p>
 	Età: 12-15 anni<br />
@@ -59,6 +62,7 @@
 	Referente: Lukas Paoli, in collaborazione con Forum Prevenzione<br />			
 	</p>
 	<h3>Film & Dance</h3>
+	<img src="./../../../../assets/Kiso_Dance.jpg" style="height:110px;float:left;margin-right:15px" />
 	<p>Attenzione registi/e e ballerini/e! Tutti insieme troveremo fat beats, svilupperemo una coreografia ganza e produrremo un video di musica o un filmato. Non ci sono limiti alla tua immaginazione.</p>
 	<p>
 	Età: 11-15 anni<br />
