--- a/public/templates/info/info-kiso-it.html
+++ b/public/templates/info/info-kiso-it.html
@@ -31,6 +31,7 @@
 	<br />
 	<br />
 	<h2><strong>Le nostre settimane di progetto per ragazzi dai 11 ai 15 anni</strong></h2>
+	<h4>L'iscrizioni a <strong><time>15 marzo 2019</time></strong></h4>
 	<h3>Film ab</h3>
 	<img src="./../../../../assets/Kiso_Film.jpg" style="height:110px;float:left;margin-right:15px" />
 	<p>Let's make a movie! Che cosa succede esattamente davanti e dietro la telecamera? Nel nostro laboratorio cinematografico andremo a conoscere i vari ambiti intorno alla creazione di un film girando, montando e creando il nostro cortometraggio. Possiamo dare libero sfogo alle nostre idee e anche scivolare nei diversi ruoli sul set. Pronti? Azione!</p>
@@ -76,4 +77,5 @@
 	<img src="./../../../../assets/raika.png" style="vertical-align:bottom;height:70px;margin-left:15px" />
 	<img src="./../../../../assets/familienagentur.png" style="vertical-align:bottom;height:150px;margin-left:15px" />
 	<img src="./../../../../assets/stadt_bozen.jpg" style="vertical-align:bottom;height:70px;margin-left:15px; margin-bottom:30px" />
+	<img src="./../../../../assets/Kiso_papperlapapp.jpg" style="vertical-align:bottom;height:70px;margin-left:15px; margin-bottom:30px" />
 </div>
